--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-25  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+        * ru.po: Updated Russian translation
+        by Vasiliy Faronov <qvvx@yandex.ru>
+
 2007-11-08  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
 	* be@latin.po: Updated Belarusian Latin translation.
