--- a/po/ru.po
+++ b/po/ru.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: yelp trunk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-16 00:45+0400\n"
-"PO-Revision-Date: 2007-09-03 18:44+0300\n"
-"Last-Translator: Nickolay V. Shmyrev <nshmyrev@yandex.ru>\n"
+"PO-Revision-Date: 2007-11-25 21:48+0300\n"
+"Last-Translator: Vasiliy Faronov <qvvx@yandex.ru>\n"
 "Language-Team: Russian <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -927,7 +927,7 @@ msgstr "Показать предыдущую страницу"
 
 #: ../src/yelp-window.c:384
 msgid "_Forward"
-msgstr "_Вперед"
+msgstr "_Вперёд"
 
 #: ../src/yelp-window.c:386
 msgid "Show next page in history"
@@ -935,7 +935,7 @@ msgstr "Показать следующую страницу"
 
 #: ../src/yelp-window.c:389
 msgid "_Help Topics"
-msgstr "_Темы справки"
+msgstr "К _темам справки"
 
 #: ../src/yelp-window.c:391
 msgid "Go to the listing of help topics"
@@ -943,11 +943,11 @@ msgstr "Перейти к списку тем справки"
 
 #: ../src/yelp-window.c:394
 msgid "_Previous Section"
-msgstr "_Предыдущий раздел"
+msgstr "К _предыдущему разделу"
 
 #: ../src/yelp-window.c:399
 msgid "_Next Section"
-msgstr "_Следующий раздел"
+msgstr "К _следующему разделу"
 
 #: ../src/yelp-window.c:404 ../src/yelp-window.c:436
 msgid "_Contents"
