--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-29  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2007-11-28  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
